--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -76,3 +76,42 @@ file,
 textarea {
     max-width: 400px;
 }
+
+.item {
+    position:relative;
+    padding-top:20px;
+    display:inline-block;
+}
+
+
+.tipo-item-novo{
+    position: absolute;
+    right:-20px;
+    top:0px;
+    background: #007bff ;
+    text-align: center;
+    border-radius: 30px 30px 30px 30px;
+    color:white;
+    padding:5px 10px;
+    font-size:14px;
+}
+
+.tipo-item-usado{
+    position: absolute;
+    right:-20px;
+    top:0px;
+    background:#5eba7d;
+    text-align: center;
+    border-radius: 30px 30px 30px 30px;
+    color:white;
+    padding:5px 10px;
+    font-size:14px;
+}
+
+.card-title {
+    height: 100px;
+}
+
+.card-body {
+    height: 100px;
+}
