update home text

--- a/web/src/app/navegacao/home/home.component.html
+++ b/web/src/app/navegacao/home/home.component.html
@@ -7,7 +7,7 @@
             </div>
             <div class="col-lg-10">
                 <h1 class="display-5 text-white mt-5 mb-2"> Leilão SPA</h1>
-                <p class="lead mb-5 text-white">Aplicação Demo utilizando Angular 2 e Back-End com .Net Core</p>
+                <p class="lead mb-5 text-white">Uma aplicação Demo, utilizando Angular 2 e .Net Core no Back-End</p>
             </div>
         </div>
     </div>
